--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "start-watch": "nodemon --exec 'yarn start'",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha **/*.test.js",
     "test-watch": "nodemon --exec 'yarn test'"
   },
   "engines": {
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
     "google-translate-api": "^2.2.2",
