--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "body-parser": "^1.17.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
+    "google-auth-library": "^0.10.0",
     "google-translate-api": "^2.2.2",
+    "googleapis": "^18.0.0",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "validator": "^7.0.0"
