--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "John Steam",
   "license": "MIT",
   "dependencies": {
+    "array-flatten": "^2.1.1",
+    "axios": "^0.16.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "crypto-js": "^3.1.9-1",
