--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "crypto-js": "^3.1.9-1",
+    "easy-edit-table": "teamsteamdev/easy-edit-table",
     "express": "^4.15.2",
     "google-auth-library": "^0.10.0",
-    "google-translate-api": "^2.2.2",
+    "google-translate-api": "teamsteamdev/google-translate-api#2083",
     "googleapis": "^18.0.0",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
